// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VoteListProfile /> renders correcty with empty node 1`] = `
<ListGroup
  bsClass="media-list"
  componentClass="ul"
<<<<<<< HEAD
>
  <ForwardRef(Relay(VoteItem))
    key="node1"
    vote={
      Object {
        "$fragmentRefs": null,
        "id": "node1",
      }
    }
  />
</ListGroup>
=======
/>
>>>>>>> Add jest test
`;

exports[`<VoteListProfile /> renders correcty with two node 1`] = `
<ListGroup
  bsClass="media-list"
  componentClass="ul"
>
  <ForwardRef(Relay(VoteItem))
    key="1"
    vote={
      Object {
<<<<<<< HEAD
        "$fragmentRefs": null,
=======
>>>>>>> Add jest test
        "id": "1",
      }
    }
  />
  <ForwardRef(Relay(VoteItem))
    key="2"
    vote={
      Object {
<<<<<<< HEAD
        "$fragmentRefs": null,
=======
>>>>>>> Add jest test
        "id": "2",
      }
    }
  />
</ListGroup>
`;

exports[`<VoteListProfile /> renders two nodes and a loadmore button 1`] = `
<ListGroup
  bsClass="media-list"
  componentClass="ul"
>
  <ForwardRef(Relay(VoteItem))
    key="1"
    vote={
      Object {
<<<<<<< HEAD
        "$fragmentRefs": null,
=======
>>>>>>> Add jest test
        "id": "1",
      }
    }
  />
  <ForwardRef(Relay(VoteItem))
    key="2"
    vote={
      Object {
<<<<<<< HEAD
        "$fragmentRefs": null,
=======
>>>>>>> Add jest test
        "id": "2",
      }
    }
  />
  <ListGroupItem
    bsClass="list-group-item"
    listItem={false}
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
<<<<<<< HEAD
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="link"
      disabled={false}
      onClick={[Function]}
=======
    <a
      className="small"
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
        }
      }
>>>>>>> Add jest test
    >
      <FormattedMessage
        id="global.more"
        values={Object {}}
      />
<<<<<<< HEAD
    </Button>
=======
    </a>
>>>>>>> Add jest test
  </ListGroupItem>
</ListGroup>
`;

exports[`<VoteListProfile /> renders two nodes and a loadmore button 2`] = `
<ListGroup
  bsClass="media-list"
  componentClass="ul"
>
  <ForwardRef(Relay(VoteItem))
    key="1"
    vote={
      Object {
<<<<<<< HEAD
        "$fragmentRefs": null,
=======
>>>>>>> Add jest test
        "id": "1",
      }
    }
  />
  <ForwardRef(Relay(VoteItem))
    key="2"
    vote={
      Object {
<<<<<<< HEAD
        "$fragmentRefs": null,
=======
>>>>>>> Add jest test
        "id": "2",
      }
    }
  />
  <ForwardRef(Relay(VoteItem))
    key="3"
    vote={
      Object {
<<<<<<< HEAD
        "$fragmentRefs": null,
=======
>>>>>>> Add jest test
        "id": "3",
      }
    }
  />
</ListGroup>
`;
